--- a/Example1.ipynb
+++ b/Example1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "9a51a30b-fd7e-4640-8665-70a1ff43862d",
    "metadata": {
     "tags": []
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "8aa33bbd-0287-4e88-95d8-cbb5de90ec79",
    "metadata": {
     "tags": []
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "2a99ecf2-f064-45ec-9e2f-bc909b3effa1",
    "metadata": {
     "scrolled": true
@@ -361,20 +361,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tol_c= 0.0025\n",
-      "Rel.L2= tensor(1.78163547e-07) ,Rel.Li= tensor(1.91631516e-07) ,Rel.H1= tensor(1.78131115e-07)\n"
+      "tol_c= 0.01\n",
+      "Rel.L2= tensor(1.34033075e-13) ,Rel.Li= tensor(1.37302065e-13) ,Rel.H1= tensor(1.33733093e-13)\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'losswriter' is not defined",
+     "ename": "AssertionError",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 164\u001b[0m\n\u001b[0;32m    162\u001b[0m net \u001b[38;5;241m=\u001b[39m BesselNet(N)\n\u001b[0;32m    163\u001b[0m net \u001b[38;5;241m=\u001b[39m load_model(net)\n\u001b[1;32m--> 164\u001b[0m test_err(net)\n\u001b[0;32m    165\u001b[0m losswriter \u001b[38;5;241m=\u001b[39m LossWriter(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mloss/loss_exam1_\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m.npz\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m%\u001b[39m(k,N))\n\u001b[0;32m    166\u001b[0m losswriter\u001b[38;5;241m.\u001b[39madd_scalar(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mk\u001b[39m\u001b[38;5;124m'\u001b[39m,k)\n",
-      "Cell \u001b[1;32mIn[10], line 180\u001b[0m, in \u001b[0;36mtest_err\u001b[1;34m(net, n)\u001b[0m\n\u001b[0;32m    177\u001b[0m Rel_H1 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39msqrt(torch\u001b[38;5;241m.\u001b[39mnorm(u_ex\u001b[38;5;241m-\u001b[39mu)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m+\u001b[39mtorch\u001b[38;5;241m.\u001b[39mnorm(u_dx_ex\u001b[38;5;241m-\u001b[39mu_dx)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m+\u001b[39mtorch\u001b[38;5;241m.\u001b[39mnorm(u_dy_ex\u001b[38;5;241m-\u001b[39mu_dy)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m/\u001b[39m\\\n\u001b[0;32m    178\u001b[0m             torch\u001b[38;5;241m.\u001b[39msqrt(torch\u001b[38;5;241m.\u001b[39mnorm(u_ex)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m+\u001b[39m torch\u001b[38;5;241m.\u001b[39mnorm(u_dx_ex)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m+\u001b[39mtorch\u001b[38;5;241m.\u001b[39mnorm(u_dy_ex)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m    179\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRel.L2=\u001b[39m\u001b[38;5;124m\"\u001b[39m,Rel_L2\u001b[38;5;241m.\u001b[39mcpu(),\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,Rel.Li=\u001b[39m\u001b[38;5;124m\"\u001b[39m,Rel_Li\u001b[38;5;241m.\u001b[39mcpu(),\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,Rel.H1=\u001b[39m\u001b[38;5;124m\"\u001b[39m,Rel_H1\u001b[38;5;241m.\u001b[39mcpu())\n\u001b[1;32m--> 180\u001b[0m losswriter\u001b[38;5;241m.\u001b[39madd_scalar(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRel_L2\u001b[39m\u001b[38;5;124m'\u001b[39m,Rel_L2\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mitem())\n\u001b[0;32m    181\u001b[0m losswriter\u001b[38;5;241m.\u001b[39madd_scalar(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRel_Li\u001b[39m\u001b[38;5;124m'\u001b[39m,Rel_Li\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mitem())\n\u001b[0;32m    182\u001b[0m losswriter\u001b[38;5;241m.\u001b[39madd_scalar(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRel_H1\u001b[39m\u001b[38;5;124m'\u001b[39m,Rel_H1\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mitem())\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'losswriter' is not defined"
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 180\u001b[0m\n\u001b[0;32m    178\u001b[0m net \u001b[38;5;241m=\u001b[39m load_model(net)\n\u001b[0;32m    179\u001b[0m test_err(net)\n\u001b[1;32m--> 180\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;241m1\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[0;32m    181\u001b[0m losswriter \u001b[38;5;241m=\u001b[39m LossWriter(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mloss/loss_exam1_\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m.npz\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m%\u001b[39m(k,N))\n\u001b[0;32m    182\u001b[0m losswriter\u001b[38;5;241m.\u001b[39madd_scalar(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mk\u001b[39m\u001b[38;5;124m'\u001b[39m,k)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
    ],
@@ -507,16 +506,28 @@
     "    plt.grid(linestyle=\"--\")\n",
     "    plt.xlabel('x')\n",
     "    plt.ylabel('y')\n",
-    "    plt.scatter(exact_center[:,0],exact_center[:,1],c='r',marker='o',label='wave_source')\n",
+    "\n",
+    "    sz = 80\n",
+    "    # 创建散点图  \n",
+    "    plt.scatter(exact_center[:, 0], exact_center[:, 1],   \n",
+    "                c='none',              # 颜色设置为红色  \n",
+    "                marker='o',        # 圆形标记  \n",
+    "                linewidths=2.0,\n",
+    "                s=sz,             # 调整标记大小，单位是平方点  \n",
+    "                edgecolor='r',     # 圆的边缘颜色  \n",
+    "                facecolor='none',  # 圆的填充颜色设为无，即空心  \n",
+    "                label='wave_source')  \n",
+    "\n",
+    "    #plt.scatter(exact_center[:,0],exact_center[:,1],c='r',marker='o',label='wave_source')\n",
     "    blue_label_added = False\n",
     "    yellow_label_added = False\n",
     "    for i in range(len(net.hight.data.cpu())):\n",
     "        \n",
     "        if not yellow_label_added:\n",
-    "            plt.scatter(net.center.data.cpu()[i,0],net.center.data.cpu()[i,1],c='b',marker='+',label='pred_wave_source')\n",
+    "            plt.scatter(net.center.data.cpu()[i,0],net.center.data.cpu()[i,1],s=sz,c='b',marker='+',label='pred_wave_source')\n",
     "            yellow_label_added = True\n",
     "        else:\n",
-    "            plt.scatter(net.center.data.cpu()[i,0],net.center.data.cpu()[i,1],c='b',marker='+')\n",
+    "            plt.scatter(net.center.data.cpu()[i,0],net.center.data.cpu()[i,1],s=sz,c='b',marker='+')\n",
     "    \n",
     "    plt.legend(loc='upper right')\n",
     "    plt.xlim([0,1])\n",
@@ -527,12 +538,12 @@
     "\n",
     "#加载已训练模型\n",
     "def load_model(net):\n",
-    "    model = torch.load('model/2d_exam1_%d.pth'%int(k),map_location='cuda:0')\n",
+    "    model = torch.load('model/2d_exam1/2d_exam1_%d.pth'%int(k),map_location='cuda:0')\n",
     "    net.center = nn.Parameter(model['center'])\n",
     "    net.hight = nn.Parameter(model['hight'])\n",
     "    return net\n",
     "\n",
-    "k = 200\n",
+    "k = 50\n",
     "lr = 0.01\n",
     "MaxNiter = 3000\n",
     "n_bd = 2*k\n",
@@ -542,11 +553,12 @@
     "print('tol_c=',tol_c)\n",
     "torch.manual_seed(1)\n",
     "lam = 0.001#0.1,0.01,,0.0001,0.00001,0.000001\n",
-    "\n",
+    "losswriter = LossWriter('loss/loss_exam1_%d_%d.npz'%(k,N))\n",
     "x_bd = SampleBoundPoints(n_bd)\n",
     "net = BesselNet(N)\n",
     "net = load_model(net)\n",
     "test_err(net)\n",
+    "assert 1==2\n",
     "losswriter = LossWriter('loss/loss_exam1_%d_%d.npz'%(k,N))\n",
     "losswriter.add_scalar('k',k)\n",
     "losswriter.add_scalar('MaxNiter',MaxNiter)\n",
